# Python_web_HW_07

./: README.md  cli_crud.py  config.ini  connect_db.py  models.py  my_select.py  pyproject.toml  seed.py
alembic/: env.py
